--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.6",
-    "mocha": "^10.7.3"
+    "mocha": "^10.7.3",
+    "sinon": "^19.0.2"
   }
 }
